# idle-hue

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
app-bundler/: Cargo.toml
app-bundler/src/: main.rs
bundler/: Cargo.toml
bundler/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs
idle-hue/: Cargo.toml
idle-hue/src/: auto_update.rs  dropper.rs  main.rs  main_old.rs  version.txt
idle-hue/src/assets/: icon.icns  icon.sh  icon_windows.sh
idle-hue/src/dropper/: windows.rs
src/: auto_update.rs  main.rs  version.txt
version-api/: Cargo.toml  wrangler.toml
version-api-cli/: Cargo.toml
version-api-client/: Cargo.toml
version-api-client/src/: lib.rs
version-api-models/: Cargo.toml
version-api-models/src/: lib.rs
version-api/migrations/: 00001.sql
version-api/src/: lib.rs
worker/: Cargo.toml  wrangler.toml
worker/migrations/: 0001_initial.sql
worker/src/: lib.rs
