[workspace]
members = [
    "idle-hue",
    "bundler",
    "cli",
    "version-api",
    "version-api-client",
    "version-api-models",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
