[workspace]
members = [
    "idle-hue",
    "app-bundler",
    "version-api",
    "version-api-cli",
    "version-api-client",
    "version-api-models",
]
resolver = "2"

[workspace.dependencies]
# ui = { path = "../ui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
