[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
version-api-client = { path = "../version-api-client" }
version-api-models = { path = "../version-api-models" }
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
dotenv = "0.15"
