[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
version-api-models = { path = "../version-api-models" }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
thiserror = "1.0"
tempfile = "3.0"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
chrono = { workspace = true }
futures = "0.3"
