[package]
name = "idle-hue"
version = "0.8.0"
edition = "2024"

[features]
prod = []

[dependencies]
haven = { path = "../../haven", features = ["debug-overlay"]}
# haven = { git = "https://github.com/cyypherus/haven", branch = "proj", features = ["debug-overlay"]}
arboard = "3.4"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "io-util", "time", "rt-multi-thread"] }
version-api-client = { path = "../version-api-client" }
version-api-models = { path = "../version-api-models" }
tempfile = "3.8"
zip = "0.6"
semver = { version = "1.0", features = ["serde"] }
anyhow = { workspace = true }
self-replace = "1.5"
log = "0.4"
dirs = "5.0"
env_logger = "0.11.8"
directories = "6.0.0"
color = "0.3.1"
image = { version = "0.25", default-features = false, features = ["png"] }
winit = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
block2 = "0.6.1"
objc2-app-kit = { version = "0.3.1", features = ["NSColorSampler", "NSColor", "NSColorSpace", "block2"] }
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_Shell"] }

[package.metadata.bundle.bin.idle-hue]
name = "idle-hue"
identifier = "cyy.apps.idle-hue"
icon = ["idle-hue/src/assets/icon.icns"]
