[package]
name = "version-api"
version = "0.1.0"
edition = "2024"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ["d1", "http"] }
version-api-models = { path = "../version-api-models" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
